code25_all/scala/9958169.txt
  val lines = Source.fromFile(args(0)).getLines() //a collection of strings
  val longestLine = lines.reduceLeft( (a,b) =>
      if(a.length > b.length) a.length else b.length )

/home/jesvin/dev/scala/readfile.scala:11: error: type mismatch;
 found   : Int
 required: String
      if(a.length > b.length) a.length else b.length )
                                ^
/home/jesvin/dev/scala/readfile.scala:11: error: type mismatch;
 found   : Int
 required: String
      if(a.length > b.length) a.length else b.length )
                                              ^
two errors found

reduceLeft
